--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.64.2
 DB_PORT=3306
-DB_DATABASE=db1656
+DB_DATABASE=T1907A
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=192.168.64.2
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
